--- a/resume.html
+++ b/resume.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resumes</title>
+    <title>MSI CDO: Resume Support</title>
 </head>
 <body>
 
-    <header>
-  <a href = "#maincontent">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-              <li><a href = "index.html">Home</a></li>
-              <li><a href = "resume.html">Resumes</a></li>
-              <li><a href = "networking.html">Networking & Connections</a></li>
-              <li><a href="career.html">Career Exploration</a></li>
-            </ul>
-        </nav>
-        <h1>Resume Support</h1>
+<header>
+    <a href = "#maincontent">Skip to Main Content</a>
+          <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+          <nav>
+              <ul>
+                  <li><a href = "index.html">Home</a></li>
+                  <li><a href = "resume.html">Resumes</a></li>
+                  <li><a href = "networking.html">Networking & Connections</a></li>
+                  <li><a href = "career.html">Career Exploration</a></li>
+              </ul>
+          </nav>
+        <h1>MSI Career Development: Resume Support</h1>
+</header>
 
-    </header>
 <main id="maincontent">
-  
   <section>
     <h2>Craft a Resume that Tells Your Story</h2>
     <p>
@@ -35,7 +34,6 @@
       Need feedback? You can always <a href="https://umsi.instructure.com/courses/12345/pages/meet-with-a-career-coach" target="_blank">meet with a CDO Career Coach</a> to review your materials.
     </p>
   </section>
-  
   <section>
     <h2>Resume Writing Made Easy: Steps to Success</h2>
     <ol>
@@ -106,16 +104,20 @@
 
 <div>[Enter more of your own content here - that includes changing the  content of this page from Academic support to something else!]</div>
 
-    
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+    <div>
+         <h2>Networking & Connections</h2>
+           <p>Build relationships that open doors. Explore events, alumni connections, and peer opportunities that help you succeed.</p>
+         </div>
+        <div>
+          <h3>Get Started</h3>
+          <p>Schedule a resume review appointment with our Career Development Office today.</p>
+          <a href="https://si-umich.12twenty.com/events#/events/30006101293729">Book an Appointment</a>
+        </div>
     </main>
     <footer>
         <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
-        </footer>
-    
+    </footer>
 </body>
 
 </html>
