--- a/networking.html
+++ b/networking.html
@@ -3,68 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Networking & Connections</title>
+    <title>MSI CDO: Networking & Connections</title>
 </head>
 <body>
-
-    <header>
-  <a href = "#maincontent">Skip to Main Content</a>
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-        <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "resume.html">Resumes</a></li>
-                <li><a href = "networking.html">Networking & Connections</a></li>
-                <li><a href="career.html">Career Exploration</a></li>
-            </ul>
-        </nav>
-    <h1>Networking & Connections</h1>
+<header>
+    <a href = "#maincontent">Skip to Main Content</a>
+          <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+          <nav>
+              <ul>
+                  <li><a href = "index.html">Home</a></li>
+                  <li><a href = "resume.html">Resumes</a></li>
+                  <li><a href = "networking.html">Networking & Connections</a></li>
+                  <li><a href = "career.html">Career Exploration</a></li>
+              </ul>
+          </nav>
+    <h1>MSI Career Development: Networking & Connections</h1>
 
     </header>
     <main id="maincontent">
     <section>
-      <h2>Your Central Hub for Career Success at UMSI</h2>
+      <h2>Networking & Connections</h2>
       <p>
-        Ready to take the next step toward your future career? The UMSI Career Development Resource Hub is your one-stop shop for trusted guidance, practical tools, and the latest information to help you thrive as a student and job-seeker. Whether you are just starting your exploration or getting ready to launch your career, you will find everything you need, organized for you.
+        Build relationships that open doors—on campus, across industry, and in the global UMSI community. Our team curates people, programs, and tools to help you connect with confidence.
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <section>
-      <h2>Why Use This Resource?</h2>
-
-
+      <h2>What can you do here?</h2>
       <ul>
-        <li><strong>Everything in One Place:</strong> Stop searching endlessly—quickly access the resources you need for resumes, interviews, networking, mentorship, and more.</li>
-        <li><strong>Student-Focused Navigation:</strong> Browse by topic or question. Key areas are highlighted so you can get moving right away.</li>
-        <li><strong>Guidance Backed by Experts:</strong> All resources are recommended and reviewed by the UMSI Career Development Office, so you can trust the advice and materials you find here.</li>
-        <li><strong>Always Accessible:</strong> Visit the site anytime, from any device. We’re committed to meeting the accessibility needs of all students.</li>
-        <li><strong>Modern Support, UMSI Excellence:</strong> We benchmark against top peer institutions and integrate UMSI’s unique support, showcasing our commitment to your success.</li>
+        <li>Book a 1:1 networking strategy session.</li>
+        <li>Join a Career & Internship Studio drop-in.</li>
+        <li>Sign up for employer meetups & info sessions</li>
+        <li>Request an alumni introduction</li>
       </ul>
     </section>
-        <section>
-      <h2>Start Here</h2>
+    <section>
+      <h2>Student networking on campus</h2>
       <div>
-        <img src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
-        <ul>
-            <li><a href="resume.html">Resumes</a></li>
-            <li><a>Networking & Connections</a></li>
-            <li><a>Career Exploration</a></li>
-            <li><a>Talk to a Career Coach</a></li>
-        </ul>
-       
-
+        <img width="1000" src="images/MCOMMONS-Festifall2025-23.jpg" alt="A tall brick building rises in the background while students interact, write on forms, and browse materials.">
       </div>
-      <aside>
-        <h3>Most Popular Resources</h3>
-        <ul>
-          <li><a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">UMSI Resume Guide</a></li>
-          <li><a href="https://umsi.campusgroups.com/cdo/home/" target="_blank">Attend a Career Event</a></li>
-          <li><a href="https://umsi.instructure.com/courses/12345/pages/networking-tips" target="_blank">Networking Tips</a></li>
-          <li><a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" target="_blank">Interview Preparation</a></li>
-          <li><a href="https://careerlink.umich.edu" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
-        </ul>
-      </aside>
+    </section>
+    <section>
+      <h2>Why Networking Matters</h2>
+      <ul>
+        <li><strong>Everything in One Place:</strong> Events, alumni connections, employer sessions, and outreach templates.</li>
+        <li><strong>Student-focused Pathfinding:</strong> Browse by goals—career switch, first internship, or full-time search.</li>
+        <li><strong>Guidance Backed by Experts:</strong> All strategies are reviewed by the UMSI Career Development Office.</li>
+        <li><strong>Accessible & Inclusive:</strong> We design engagements with varied formats, times, and modalities.</li>
+        <li><strong>Built on UMSI Strengths:</strong> We benchmark peer institutions and leverage the power of our alumni network.</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Three Steps to Start Connecting</h2>
+      <ul>
+        <li><strong>Clarify Your Ask.:</strong> Define what you want from a conversation: role insight, portfolio feedback, referrals, or culture checks.</li>
+        <li><strong>Reach Out Smartly:</strong> Use our email and LinkedIn message templates, then tailor them with one sentence about why you chose this person.</li>
+        <li><strong>Follow Through:</strong> Send a thank-you within 24 hours, log notes, and set a next step (share an update, attend a meetup, apply).</li>
+      </ul>
     </section>
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
@@ -72,7 +67,7 @@
         The UMSI Career Development Office (CDO) offers personalized support through appointments, events, and resource guides. <a href="https://www.si.umich.edu/programs/career-development-office" target="_blank">Visit the CDO website</a> or <a href="https://umsi.umich.edu/about/locations" target="_blank">find us on campus</a> to learn more, schedule a coaching session, or just say hello.
       </p>
     </section>
-       
+
         <!-- Content taken & modified from UMGPT with the prompt, "Write me a webpage of intro content to help meet the following requirements - this is for the home page": and then pasted in the client objectives & project requirements"
         UMGPT. (2025). UMGPT ( GPT-4.1 August 25th version) [Large language model]. -->
     </main>
