--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li><a>Talk to a Career Coach</a></li>
         </ul>
       </div>
-      <aside>
+      <div>
         <h3>Most Popular Resources</h3>
         <ul>
           <li><a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" target="_blank">UMSI Resume Guide</a></li>
@@ -60,7 +60,7 @@
           <li><a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" target="_blank">Interview Preparation</a></li>
           <li><a href="https://careerlink.umich.edu" target="_blank">Career Link: UMSI’s Exclusive Career Portal</a></li>
         </ul>
-      </aside>
+      </div>
     </section>
     <section>
       <h2>Connect with the UMSI Career Development Office</h2>
