--- a/resume.html
+++ b/resume.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/html5reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>MSI CDO: Resume Support</title>
 </head>
 <body>
 
 <header>
-    <a href = "#maincontent">Skip to Main Content</a>
-          <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
-          <nav>
-              <ul>
-                  <li><a href = "index.html">Home</a></li>
-                  <li><a href = "resume.html">Resumes</a></li>
-                  <li><a href = "networking.html">Networking & Connections</a></li>
-                  <li><a href = "career.html">Career Exploration</a></li>
-              </ul>
-          </nav>
-        <h1>MSI Career Development: Resume Support</h1>
+  <a href = "#maincontent" class="skip-link">Skip to Main Content</a>
+  <nav class="navbar">
+    <div class="nav-logo">
+      <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
+    </div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="career.html">Careers</a>
+      <a href="networking.html">Networking</a>
+      <a href="resume.html" class="active">Resume</a>
+    </div>
+  </nav>
+  <h1>MSI Career Development: Resume Support</h1>
 </header>
 
 <main id="maincontent">
@@ -112,8 +116,25 @@
           <a href="https://si-umich.12twenty.com/events#/events/30006101293729">Book an Appointment</a>
         </div>
     </main>
-    <footer>
-        <p>University of Michigan School of Information | <a href="https://umich.instructure.com/courses/137916">UMSI Career Development Office </a></p>
+
+    <footer class="footer">
+      <div class="footer-logo">
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
+      </div>
+
+      <div class="footer-info">
+        <p>© Copyright 2025 Regents of the University of Michigan</p>
+        <p>School of Information<br>
+           University of Michigan<br>
+           2200 Hayward Street<br>
+           Ann Arbor, MI 48109
+        </p>
+      </div>
+
+      <div class="contact-links">
+         <a href=" ">Contact Us</a><br>
+        <a href=" ">Privacy Statement</a>
+      </div>
     </footer>
 </body>
 
