--- a/networking.html
+++ b/networking.html
@@ -45,7 +45,7 @@
     <section>
       <h2>Student networking on campus</h2>
       <div>
-        <img width="1000" src="images/MCOMMONS-Festifall2025-23.jpg" alt="A tall brick building rises in the background while students interact, write on forms, and browse materials.">
+        <img class="banner-image" src="images/MCOMMONS-Festifall2025-23.jpg" alt="A tall brick building rises in the background while students interact, write on forms, and browse materials.">
       </div>
     </section>
     <section>
