--- a/career.html
+++ b/career.html
@@ -31,7 +31,7 @@
       <p>
         The UMSI Career Development Office is a team of career development experts devoted to providing UMSI students with strategic, customized and comprehensive career services. We do much more than help students find jobs as they near graduation. We are with you every step of the way coaching, empowering and supporting you from orientation through to commencement.
       </p>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/XkK7QhQ3YCI?si=SyhzWarP57VrdsWA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe class="banner-image" height="400" src="https://www.youtube.com/embed/XkK7QhQ3YCI?si=SyhzWarP57VrdsWA" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
       <h2>The Support You Need, All in One Place</h2>
@@ -45,7 +45,7 @@
     <section>
       <h2>Start Here</h2>
       <div>
-        <img width="1000" src="images/MCOMMONS-Festifall2025-21.jpg" alt="A student presenter gives a thumbs-up while talking to other students gathered around the booth.">
+        <img class="banner-image" src="images/MCOMMONS-Festifall2025-21.jpg" alt="A student presenter gives a thumbs-up while talking to other students gathered around the booth.">
       </div>
     </section>
     <section>
