--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
       </ul>
     </section>
      <section>
-      <h2>Start Here</h2>
+      <div>
+        <a href=" " class="btn btn-large">Visit UMSI Resources</a>
+      </div>
+    </section>
+      <section>
       <div>
         <img class="banner-image" src="images/UMSI_CampusFall_UMSIBackpack_02.jpg" alt="A student wears a UMSI backpack in fall on the drag.">
         <ul>
