--- a/networking.html
+++ b/networking.html
@@ -42,6 +42,45 @@
         <li>Request an alumni introduction</li>
       </ul>
     </section>
+
+    <section class="card-container">
+      <article class="card">
+        <div class="card-icon-1"></div>
+        <h3 class="card-title">Book a 1:1</h3>
+        <p class="card-subtitle">
+          Schedule a personalized networking strategy session with UMSI career experts.
+        </p>
+        <a href="#" class="card-btn">Book Now</a>
+      </article>
+
+      <article class="card">
+        <div class="card-icon-2"></div>
+        <h3 class="card-title">Career & Internship Studio</h3>
+        <p class="card-subtitle">
+          Drop in for resume reviews, quick questions, or feedback on your job search approach.
+        </p>
+        <a href="#" class="card-btn">Join a Session</a>
+      </article>
+
+      <article class="card">
+        <div class="card-icon-3"></div>
+        <h3 class="card-title">Employer Meetups</h3>
+        <p class="card-subtitle">
+          Sign up for upcoming employer meetups and information sessions to connect directly with recruiters.
+        </p>
+        <a href="#" class="card-btn">View Events</a>
+      </article>
+
+      <article class="card">
+        <div class="card-icon-4"></div>
+        <h3 class="card-title">Alumni Connections</h3>
+        <p class="card-subtitle">
+          Request an introduction to a UMSI alum working in your target field and expand your professional network.
+        </p>
+        <a href="#" class="card-btn">Request Intro</a>
+      </article>
+    </section>
+
     <section>
       <h2>Student networking on campus</h2>
       <div>
