--- a/networking.html
+++ b/networking.html
@@ -33,17 +33,9 @@
       </p>
     </section>
 
-    <section>
-      <h2>What can you do here?</h2>
-      <ul>
-        <li>Book a 1:1 networking strategy session.</li>
-        <li>Join a Career & Internship Studio drop-in.</li>
-        <li>Sign up for employer meetups & info sessions</li>
-        <li>Request an alumni introduction</li>
-      </ul>
-    </section>
-
-    <section class="card-container">
+    <section class="card-section">
+      <h2 class="section-title">Get Started</h2>
+    <div class="card-container">
       <article class="card">
         <div class="card-icon-1"></div>
         <h3 class="card-title">Book a 1:1</h3>
@@ -79,6 +71,7 @@
         </p>
         <a href="#" class="card-btn">Request Intro</a>
       </article>
+    </div>
     </section>
 
     <section>
