--- a/index.html
+++ b/index.html
@@ -36,6 +36,55 @@
       <iframe class="banner-image" height="400" src="https://www.youtube.com/embed/GSjGeDYJ5Nk?si=qhxJPRTIT___x8hG" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
+    <section class="card-section">
+      <h2>Most Popular Resources</h2>
+      <div class="card-container">
+        <article class="card">
+          <img class="card-icon" src="images/resume-guide.png" alt="Purple icon of a resume guide">
+          <h3 class="card-title">UMSI Resume Guide</h3>
+          <p class="card-subtitle">
+            Learn how to create a standout resume that aligns with UMSI’s standards.
+          </p>
+          <a href="https://umsi.instructure.com/courses/12345/pages/resume-guide" class="card-btn">
+            Open Resource
+          </a>
+        </article>
+
+        <article class="card">
+          <img class="card-icon" src="images/career-event.png" alt="Green icon of a calendar event">
+          <h3 class="card-title">Attend a Career Event</h3>
+          <p class="card-subtitle">
+            Explore and register for upcoming career and internship events.
+          </p>
+          <a href="https://umsi.campusgroups.com/cdo/home/" class="card-btn">
+            Visit Page
+          </a>
+        </article>
+
+        <article class="card">
+          <img class="card-icon" src="images/interview-prep.png" alt="Orange icon of a video player">
+          <h3 class="card-title">Interview Preparation</h3>
+          <p class="card-subtitle">
+            Access guides and practice questions to strengthen your interview skills.
+          </p>
+          <a href="https://umsi.instructure.com/courses/12345/pages/interview-prep" class="card-btn">
+            Start Prep
+          </a>
+        </article>
+
+        <article class="card">
+          <img class="card-icon" src="images/career-link.png" alt="Light green icon of a link">
+          <h3 class="card-title">Career Link</h3>
+          <p class="card-subtitle">
+            Browse UMSI’s exclusive career portal for job and internship opportunities.
+          </p>
+          <a href="https://careerlink.umich.edu" class="card-btn">
+            Open Portal
+          </a>
+        </article>
+      </div>
+    </section>
+
     <section>
       <h2>Why Use This Resource?</h2>
       <ul>
