--- a/resume.html
+++ b/resume.html
@@ -6,20 +6,28 @@
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>MSI CDO: Resume Support</title>
+    <script src="js/navbar.js" defer></script>
+    <script src="js/accordion.js" defer></script>
+    <script src="js/footer-year.js" defer></script>
 </head>
 <body>
 
 <header>
   <a href = "#maincontent" class="skip-link">Skip to Main Content</a>
   <nav class="navbar">
-    <div class="nav-logo">
-      <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
-    </div>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="career.html">Careers</a>
-      <a href="networking.html">Networking</a>
-      <a href="resume.html" class="active">Resume</a>
+    <div class="navbar-container">
+      <div class="nav-logo">
+        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
+      </div>
+      <button class="hamburger-menu" id="hamburger-menu" aria-label="Toggle navigation menu" aria-expanded="false">
+        <span class="hamburger-icon"></span>
+      </button>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="career.html">Careers</a>
+        <a href="networking.html">Networking</a>
+        <a href="resume.html" class="active">Resume</a>
+      </div>
     </div>
   </nav>
   <h1>MSI Career Development: Resume Support</h1>
@@ -84,24 +92,44 @@
 
   <section>
     <h2>Resume FAQ</h2>
-    <ul>
-      <li>
-        <strong>How long should my resume be?</strong><br>
-        For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.
-      </li>
-      <li>
-        <strong>Do I need a different resume for each application?</strong><br>
-        It’s wise to tailor your resume to the requirements and keywords of each opportunity.
-      </li>
-      <li>
-        <strong>Is it okay to include coursework or student projects?</strong><br>
-        Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.
-      </li>
-      <li>
-        <strong>How often should I update my resume?</strong><br>
-        Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.
-      </li>
-    </ul>
+    <div class="accordion">
+      <div class="accordion-item">
+        <button class="accordion-header" aria-expanded="false">
+          <span class="accordion-title">How long should my resume be?</span>
+          <span class="accordion-icon" aria-hidden="true"></span>
+        </button>
+        <div class="accordion-content">
+          <p>For most UMSI students and new grads, one page is best. More experienced professionals may require two pages.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-header" aria-expanded="false">
+          <span class="accordion-title">Do I need a different resume for each application?</span>
+          <span class="accordion-icon" aria-hidden="true"></span>
+        </button>
+        <div class="accordion-content">
+          <p>It's wise to tailor your resume to the requirements and keywords of each opportunity.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-header" aria-expanded="false">
+          <span class="accordion-title">Is it okay to include coursework or student projects?</span>
+          <span class="accordion-icon" aria-hidden="true"></span>
+        </button>
+        <div class="accordion-content">
+          <p>Absolutely! UMSI coursework and projects are valued by employers, especially if they show relevant skills and impact.</p>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <button class="accordion-header" aria-expanded="false">
+          <span class="accordion-title">How often should I update my resume?</span>
+          <span class="accordion-icon" aria-hidden="true"></span>
+        </button>
+        <div class="accordion-content">
+          <p>Update your resume every semester, after major projects, or whenever you gain a new role or responsibility.</p>
+        </div>
+      </div>
+    </div>
   </section>
           <!-- Content taken & modified from UMGPT with the prompt, "for the same content write me some intro content and resources for a resume page" - this was after I had asked for content for the home page.
         UMGPT. (2025). UMGPT (GPT-4.1 August 25th version) [Large language model]. -->
@@ -118,22 +146,24 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-logo">
-        <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
-      </div>
+      <div class="footer-container">
+        <div class="footer-logo">
+          <img src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="University of Michigan School of Information logo">
+        </div>
 
-      <div class="footer-info">
-        <p>© Copyright 2025 Regents of the University of Michigan</p>
-        <p>School of Information<br>
-           University of Michigan<br>
-           2200 Hayward Street<br>
-           Ann Arbor, MI 48109
-        </p>
-      </div>
+        <div class="footer-info">
+          <p>© Copyright <span id="current-year">2025</span> Regents of the University of Michigan</p>
+          <p>School of Information<br>
+             University of Michigan<br>
+             2200 Hayward Street<br>
+             Ann Arbor, MI 48109
+          </p>
+        </div>
 
-      <div class="contact-links">
-         <a href=" ">Contact Us</a><br>
-        <a href=" ">Privacy Statement</a>
+        <div class="contact-links">
+           <a href=" ">Contact Us</a><br>
+          <a href=" ">Privacy Statement</a>
+        </div>
       </div>
     </footer>
 </body>
